Fix overflow issue Add bills

--- a/src/components/AddBills.css
+++ b/src/components/AddBills.css
@@ -11,9 +11,10 @@
 
 .add-bill-form {
     min-width: 900px;
-    max-width: 600px;
     margin: 0 auto;
     padding: 20px;
+    max-height: 600px;
+    overflow-y: auto;
 }
 
 .add-bill-heading {
